# meteo2

./: docker-compose.yml  pyproject.toml
Data/: Churanov.csv  Doksany.csv
src/: __main__.py
